--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <!-- Navigation Menu -->
     <nav class="navbar">
         <!-- logo -->
-        <div class= "logo">Aladdin</div>
+        <div class= "logo">Jaren Hoffman</div>
         <!-- hamburger toggle -->
         <a href= "#" class="toggle-button">
             <span class="bar"></span>
@@ -33,18 +33,18 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="heroImage">
-            <img src="assets/aladdin2.jpeg"></img>
+            <img src="assets/unnamed (1).jpg"></img>
         </div> <!-- close heroImage class -->
         <div class="heroText">
             <div class="heroTextTop">
                 <h3>Hi!</h3>
                 <h3>My Name is</h3>
-                <h1 class="heroName"><em>Aladdin</em></h1>
+                <h1 class="heroName"><em>Jaren</em></h1>
                  
             </div> <!-- close heroTextTop class -->
             <div class="heroTextBottom">
                 <h4>Welcome to my </h4>
-                <h3>WDW Computer Science</h3>
+                <h3>WRHS Computer Science</h3>
                 <h4>Student Portfolio</h4>
                 
             </div> <!-- Close heroTextBottom class -->
