--- a/blog.html
+++ b/blog.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" type="text/css" />
     <link rel="stylesheet" href="nav.css" type="text/css" />
-    <title>Aladdin's Blog</title>
+    <title>Jaren's Blog</title>
 </head>
 <body>
           <!-- Navigation Menu -->
     <nav class="navbar">
         <!-- logo -->
-        <div class= "logo">Aladdin</div>
+        <div class= "logo">Jaren Hoffman</div>
         <!-- hamburger toggle -->
         <a href= "#" class="toggle-button">
             <span class="bar"></span>
@@ -23,7 +23,7 @@
         <div class="navbar-links">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
             </ul>   <!-- close ul list -->
