--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="navbar-links">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
             </ul>   <!-- close ul list -->
@@ -33,7 +33,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="heroImage">
-            <img src="assets/unnamed (1).jpg"></img>
+            <img src="assets/mypicture.jpg"></img>
         </div> <!-- close heroImage class -->
         <div class="heroText">
             <div class="heroTextTop">
