--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
         <div class="navbar-links">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
             </ul>   <!-- close ul list -->
@@ -78,7 +78,7 @@
  <div class="projectCard">
                   <h2>Image Gallery</h2>
                   <p><em>Click image below to see project</em></p>
-                  <a href=" https://csf2223.github.io/studentportfolio-HoffmanJaren/"><img src="assets/unnamed (1).jpg"></img></a>
+                  <a href=" https://csf2223.github.io/studentportfolio-HoffmanJaren/"><img src="assets/aladdin2.jpeg"></img></a>
                   <p>This project is a static website Image Gallery of Hawaii.</p>
                   <p><em>Course: CS Foundations</em></p>
                   <div class="projectIcons"></div>
