finishing about me and should be submitted by tmrw

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -31,12 +31,12 @@
     </nav>  <!-- close navbar class -->
     
     <section class="filler">
-        <h1>To be completed by students.</h1>
-        <h3>On their personal student portfolio.</h3>
+        <h1>About me!!</h1>
+        <h3>Hello there! My name is Jaren, I am 14 and go to Woodland Region High School. I have one Sister, her name is Janelle and she is 2 years old.I recently started taking computer science when school started. I am planning on becoming an Electrical Engineer I am also planning on going D1 in Basketball. As of right now i am playing for the Woodland Region HS basketball team. </h3>
     </section>
         
     <footer>
-        <p class="copyright">&copy; WDW Aladdin 2022. All rights reserved.</p>
+        <p class="copyright">&copy; WDW Jaren 2022. All rights reserved.</p>
         <ul class="bottomNav">
             <li><a href="index.html">Home</a></li>
             <li class="divider">|</li>
