Submit for grading

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -32,7 +32,7 @@
     
     <section class="filler">
         <h1>About me!!</h1>
-        <h3>Hello there! My name is Jaren, I am 14 and go to Woodland Region High School. I have one Sister, her name is Janelle and she is 2 years old.I recently started taking computer science when school started. I am planning on becoming an Electrical Engineer I am also planning on going D1 in Basketball. As of right now i am playing for the Woodland Region HS basketball team. </h3>
+        <h3>Hello there! My name is Jaren, I am 14 and go to Woodland Regional High School. I have one Sister, her name is Janelle and she is 2 years old. I recently started taking computer science when school started. I am planning on becoming an Electrical Engineer I am also planning on going D1 in Basketball. As of right now I am playing for the Woodland Regional HS basketball team to get better than how I am right now. I hope you enjoyed seeing my past projects and hope to have you see my next ones coming up!</h3>
     </section>
         
     <footer>
